--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,87 @@
 // TODO
+.container {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0 2rem;
+  height: calc(100vh - 5rem);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.posts {
+  max-width: 720px;
+  margin: 5rem auto 0;
+
+  a {
+    display: block;
+
+    h1 {
+      color: var(--heading);
+      font-size: 1.75rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+    }
+
+    p {
+      color: var(--body);
+      font-size: 1.125rem;
+      font-weight: 400;
+      margin-bottom: 1.5rem;
+    }
+
+    & + a {
+      margin-top: 2rem;
+      padding-top: 2rem;
+      border-top: 1px solid var(--gray-700);
+    }
+  }
+
+  .info {
+    display: flex;
+  }
+  .createAt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1.625rem;
+
+    img {
+      margin-right: 0.5rem;
+    }
+
+    time {
+      color: var(--info);
+      font-size: 0.875rem;
+      font-weight: 400;
+    }
+  }
+
+  .author {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      margin-right: 0.5rem;
+    }
+
+    span {
+      color: var(--info);
+      font-size: 0.875rem;
+      font-weight: 400;
+    }
+  }
+
+  button {
+    border: 0;
+    background: transparent;
+    color: var(--highlight);
+    font-size: 1.125rem;
+    font-weight: 600;
+    margin-top: 4rem;
+    margin-bottom: 3rem;
+  }
+}
