--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,153 @@
-// TODO
+.loadPost {
+  display: flex;
+  margin-top: 9rem;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 3rem;
+  font-weight: 700;
+
+  color: var(--heading);
+}
+
+.postContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 6.5625rem;
+
+  img {
+    width: 90rem;
+    height: 25rem;
+  }
+
+  h1 {
+    max-width: 720px;
+    margin-top: 5rem;
+    font-size: 3rem;
+    font-weight: 700;
+
+    color: var(--heading);
+  }
+}
+
+.postContent {
+  max-width: 720px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 5rem;
+
+  h2 {
+    font-size: 2.25rem;
+    font-weight: 700;
+
+    color: var(--heading);
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    font-weight: 700;
+
+    color: var(--heading);
+  }
+
+  p {
+    font-size: 1.125rem;
+    font-weight: 400;
+    line-height: 140%;
+
+    color: var(--body);
+  }
+
+  p,
+  ol {
+    margin: 1.5rem 0;
+  }
+
+  ol {
+    padding: 1.5rem;
+
+    li {
+      margin: 0.5rem 0;
+      color: var(--body);
+    }
+  }
+
+  pre {
+    padding: 1.5rem;
+    background-color: var(--body);
+  }
+}
+
+.info {
+  display: flex;
+  width: 720px;
+  justify-content: start;
+  align-items: center;
+
+  margin-top: 1.5625rem;
+  margin-bottom: 4.125rem;
+}
+
+.createAt {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-right: 1.5rem;
+
+  img {
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-right: 0.5rem;
+  }
+
+  time {
+    color: var(--info);
+    font-size: 0.875rem;
+    font-weight: 400;
+  }
+}
+
+.author {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-right: 1.5rem;
+
+  img {
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-right: 0.5rem;
+  }
+
+  span {
+    color: var(--info);
+    font-size: 0.875rem;
+    font-weight: 400;
+  }
+}
+
+.readingTime {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-right: 0.5rem;
+  }
+
+  span {
+    color: var(--info);
+    font-size: 0.875rem;
+    font-weight: 400;
+  }
+}
