--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,54 @@
   padding: 0;
 }
 
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem 'Inter' sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+body {
+  background: var(--background);
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+:root {
+  --background: #1a1d23;
+  --heading: #f8f8f8;
+  --info: #bbbbbb;
+  --body: #d7d7d7;
+  --highlight: #ff57b2;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93, 75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87, 5%;
+  }
+}
+
 // TODO
